# configurer

./: .dockerignore  .readthedocs.yml  LICENSE  README.rst  example.py  setup.cfg  setup.py  test-requirements.txt  tox.ini
.circleci/: config.yml
configurer/: __init__.py  component.py  consts.py  exceptions.py  manager.py  option.py
configurer/ext/toml/: __init__.py
configurer/ext/yaml/: __init__.py
configurer/parsers/: __init__.py
configurer/readers/: __init__.py  base.py  dict.py  environ.py  json.py  yaml.py
configurer/validators/: __init__.py
doc/source/: api.rst  conf.py  index.rst
examples/redis/: Dockerfile  docker-compose.yml  redis-example.py  requirements.txt  run.sh
tests/unit/: test_basic.py  test_environ_reader.py  test_json.py  test_parsers.py  test_toml.py  test_validators.py  test_yaml.py
