[metadata]
name = configurer
# version = {version}
author = Jamie Lennox
author-email = jamielennox@gmail.com
home-page = https://github.com/jamielennox/configurer
description = Configuration abstraction library
# long-description = file: README.rst, CHANGELOG.rst
license = Apache-2
license-file = LICENSE
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[bdist_wheel]
universal = 1
